--- a/apps/ux-films-finder/src/app/components/card/card.component.html
+++ b/apps/ux-films-finder/src/app/components/card/card.component.html
@@ -2,7 +2,7 @@
   <img class="card__img" [src]="url" />
   <div class="card__name">{{ name }}</div>
   <div class="card__rating" *ngIf="rating > 0">{{ rating }}</div>
-  <ng-container *ngIf="gender !== ''">
+  <ng-container *ngIf="!!gender">
     <div class="card__gender">
       <mat-icon>{{ gender === 'FEMALE' ? 'female' : 'male' }}</mat-icon>
     </div>
