--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -33,24 +33,24 @@
     display: flex;
     flex-direction: column;
   }
-  &__icon {
+  &__icon .material-icons {
     font-size: 32px;
     margin-right: 24px;
-    &._female {
+    &._female .mat-icon-no-color {
       color: @color-pink-cb;
     }
-    &._male {
+    &._male .mat-icon-no-color {
       color: @color-blue-27;
     }
   }
-  &__icon-title {
+  &__icon-title .material-icons {
     font-size: 40px;
     line-height: 56px;
     margin-left: 8px;
-    &._female {
+    &._female .mat-icon-no-color {
       color: @color-pink-cb;
     }
-    &._male {
+    &._male .mat-icon-no-color {
       color: @color-blue-27;
     }
   }
