--- a/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/base/common/colors.less
@@ -3,3 +3,21 @@
 @color-gray-66: #666666;
 
 @color-white-ff: #ffffff;
+
+@color-comedy: #b21111;
+@color-horror: #490000;
+@color-adventures: #2c6102;
+@color-thriller: #00657b;
+@color-melodrama: #cf4409;
+@color-fantasy: #00add3;
+@color-action: #192241;
+@color-family: #5025ad;
+@color-drama: #2f4c58;
+@color-crime: #9e8b25;
+@color-cartoon: #74a12a;
+@color-anime: #a12a8e;
+@color-military: #2b8660;
+@color-history: #004267;
+@color-biography: #474732;
+@color-detective: #a43370;
+@color-fiction: #6b5858;
