--- a/apps/ux-films-finder/src/app/components/banner/banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/banner.component.less
@@ -120,78 +120,54 @@
   &__description {
     width: 345px;
     height: 496px;
-    margin-top: 55px;
+    margin-top: 100px;
     line-height: 2;
     margin-left: 12px;
-    display: inline-grid;
     display: grid;
-    grid-template-columns: 130px 100px;
+    grid-template-columns: 150px 130px;
     grid-template-rows: 75px 75px 75px 75px 75px;
-
-    &._rating {
-      grid-area: 1 / 1 / 2 / 2;
-      color: rgb(167, 167, 167);
+    &-title {
       font-size: 14px;
       text-align: left;
-    }
+      color: rgb(167, 167, 167);
 
-    &._rating-icon {
-      grid-area: 1 / 2 / 2 / 3;
-      color: black;
+      &._rating {
+        grid-area: 1 / 1 / 2 / 2;
+      }
+
+      &._filmLength {
+        grid-area: 2 / 1 / 3 / 2;
+      }
+      &._country {
+        grid-area: 3 / 1 / 4 / 2;
+      }
+      &._year {
+        grid-area: 4 / 1 / 5 / 2;
+      }
+    }
+    &-value {
       font-size: 17px;
       text-align: right;
-    }
-
-    &._rating-icon div {
-      background: #ffffff;
-      border-radius: 17px;
-      text-align: center;
-      margin-top: 0px;
-      margin-left: 50px;
-    }
-
-    &._filmLength {
-      grid-area: 2 / 1 / 3 / 2;
-      color: rgb(167, 167, 167);
-      font-size: 14px;
-      text-align: left;
-    }
-
-    &._filmLength-info {
-      grid-area: 2 / 2 / 3 / 3;
       color: white;
-      font-size: 16px;
-      text-align: right;
-      word-spacing: 60px;
-    }
-
-    &._countries {
-      grid-area: 3 / 1 / 4 / 2;
-      color: rgb(167, 167, 167);
-      font-size: 14px;
-      text-align: left;
-    }
-
-    &._country {
-      grid-area: 3 / 2 / 4 / 3;
-      color: white;
-      font-size: 16px;
-      text-align: right;
-      word-spacing: 60px;
-    }
-
-    &._years {
-      grid-area: 4 / 1 / 5 / 2;
-      color: rgb(167, 167, 167);
-      font-size: 14px;
-      text-align: left;
-    }
-
-    &._year {
-      grid-area: 4 / 2 / 5 / 3;
-      color: white;
-      font-size: 16px;
-      text-align: right;
+      word-spacing: 80px;
+      &._rating {
+        grid-area: 1 / 2 / 2 / 3;
+        color: black;
+        background: #ffffff;
+        border-radius: 17px;
+        text-align: center;
+        margin-top: 0px;
+        margin-left: 50px;
+      }
+      &._filmLength {
+        grid-area: 2 / 2 / 3 / 3;
+      }
+      &._country {
+        grid-area: 3 / 2 / 4 / 3;
+      }
+      &._year {
+        grid-area: 4 / 2 / 5 / 3;
+      }
     }
   }
 }
