--- a/apps/ux-films-finder/src/assets/styles/themes/dark/common/colors.less
+++ b/apps/ux-films-finder/src/assets/styles/themes/dark/common/colors.less
@@ -6,16 +6,16 @@
 
 @color-gray-42: #424242;
 
-@color-gray-ac: #ACACAC;
+@color-gray-ac: #acacac;
 
-@color-gray-0E: #E0E1E3;
+@color-gray-0E: #e0e1e3;
 
 @color-white-ff: #ffffff;
 
 @color-green-69: #69f0ae;
 
-@color-green-04: #048E4B;
+@color-green-04: #048e4b;
 
 @color-blue-27: #274879;
 
-@color-pink-cb:  #CB4A78;
+@color-pink-cb: #cb4a78;
