--- a/apps/ux-films-finder/src/app/components/search/search.component.html
+++ b/apps/ux-films-finder/src/app/components/search/search.component.html
@@ -2,38 +2,54 @@
   <input
     class="search__input"
     type="text"
-    [(ngModel)]="_searchInput"
-    (ngModelChange)="getListFilms()"
-    (ngModelChange)="getActorFilms()"
+    [(ngModel)]="searchInput"
+    (ngModelChange)="getListFilms(); getActorFilms()"
     placeholder=""
   />
-  <mat-icon class="search__filter">filter_list</mat-icon>
+  <mat-icon routerLink="advanced-search" class="search__filter">tune</mat-icon>
 </div>
 
 <ng-container class="films">
   <mat-list class="films__list">
-    <p *ngIf="_searchInput" class="films__titleName">Фильмы и сериалы</p>
+    <p *ngIf="searchInput" class="films__titleName">Фильмы и сериалы</p>
     <mat-list-item
       class="films__list-item"
-      *ngFor="let film of films$ | async | slice: 0:5"
-      routerLink="/details/{{ film?.kinopoiskId }}"
-      ><img src="{{ film?.posterUrlPreview }}" /> {{ film?.nameRu }}
-      <p class="films__nameEn">{{ film?.nameEn }}</p>
+      *ngFor="let film of films$ | async | slice: 0:3"
+      routerLink="/details/{{ film?.filmId }}"
+      ><img class="films__img" src="{{ film?.posterUrlPreview }}" />
+
+      <div class="films__names">
+        <p class="films__nameRu">{{ film?.nameRu }}</p>
+        <p class="films__nameEn">{{ film?.nameEn }}</p>
+      </div>
     </mat-list-item>
-    <button *ngIf="_searchInput" class="films__button" (click)="getListFilms()">
-      Показать все
-    </button>
-    <p *ngIf="_searchInput" class="films__titleName">Персоны</p>
+    <div class="films__full-list">
+      <p *ngIf="searchInput" class="films__button" (click)="getListFilms()">
+        Показать все
+      </p>
+      <mat-icon *ngIf="searchInput" class="films__button">
+        keyboard_arrow_right
+      </mat-icon>
+    </div>
+
+    <p *ngIf="searchInput" class="films__second-titleName">Персоны</p>
     <mat-list-item
       class="films__list-item"
-      *ngFor="let actor of actors$ | async | slice: 0:5"
-      routerLink="/details/{{ actor?.personId }}"
-      ><img src="{{ actor?.posterUrl }}" /> {{ actor?.nameEn }}/{{
-        actor?.nameRu
-      }}
+      *ngFor="let actor of actors$ | async | slice: 0:3"
+      routerLink="/persons/{{ actor?.kinopoiskId }}"
+      ><img class="films__img" src="{{ actor?.posterUrl }}" />
+      <div class="films__names">
+        <p class="films__nameRu">{{ actor?.nameRu }}</p>
+        <p class="films__nameEn">{{ actor?.nameEn }}</p>
+      </div>
     </mat-list-item>
-    <button *ngIf="_searchInput" class="films__button" (click)="getListFilms()">
-      Показать все
-    </button>
+    <div class="films__full-list">
+      <p *ngIf="searchInput" class="films__button" (click)="getActorFilms()">
+        Показать все
+      </p>
+      <mat-icon *ngIf="searchInput" class="films__button"
+        >keyboard_arrow_right</mat-icon
+      >
+    </div>
   </mat-list>
 </ng-container>
