New film-banner

--- a/apps/ux-films-finder/src/app/components/banner/banner.component.html
+++ b/apps/ux-films-finder/src/app/components/banner/banner.component.html
@@ -5,11 +5,13 @@
         <div class="banner__name">
           <div class="banner__name-ru">{{ film?.nameRu }}</div>
           <div class="banner__name-en">{{ film?.nameEn }}</div>
-          <ng-container *ngFor="let genre of film.genres">
-            <div class="banner__genres" [ngClass]="color[genre.genre]">
-              {{ genre.genre }}
-            </div>
-          </ng-container>
+          <div class="banner__genres">
+            <ng-container *ngFor="let genre of film.genres">
+              <div class="banner__genre" [ngClass]="color[genre.genre]">
+                {{ genre.genre }}
+              </div>
+            </ng-container>
+          </div>
         </div>
         <div class="banner__poster">
           <div class="banner__poster _posterUrl">
@@ -19,7 +21,9 @@
         <div class="banner__description">
           <div class="banner__description-title _rating">Рейтинг</div>
           <div class="banner__description-value _rating">
-            <div>{{ film?.rating }}</div>
+            <div class="banner__description-value _rating _icon">
+              {{ film?.rating }}
+            </div>
           </div>
           <div class="banner__description-title _filmLength">
             Продолжительность
