--- a/apps/ux-films-finder/src/app/components/banner/banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/banner.component.less
@@ -9,29 +9,26 @@
 }
 
 .keen-slider {
-  width: 1442px;
+  width: 100%;
   height: 496px;
-  position: absolute;
   max-width: 100%;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
 }
 
 .banner {
-  width: 1215px;
+  width: 100%;
   height: 496px;
   background: black;
-  display: flex;
-
+  display: grid;
+  grid-template-columns: 5fr 3fr 3fr;
   &__name {
-    width: 445px;
+    width: 400px;
     padding-left: 100px;
   }
 
   &__name-ru {
     width: 300px;
     margin-top: 90px;
-    margin-bottom: 85px;
+    margin-bottom: 32px;
     font-size: 35px;
     font-weight: bold;
     color: white;
@@ -40,20 +37,28 @@
 
   &__name-en {
     width: 300px;
-    margin-bottom: 60px;
+    margin-bottom: 36px;
     color: rgb(167, 167, 167);
     font-size: 19px;
   }
-
   &__genres {
-    padding: 1px 2px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-right: 219px;
+    width: 400px;
+  }
+  &__genre {
+    padding: 4px 32px;
+    margin: 24px 24px 24px 0px;
     border-radius: 17px;
-    width: 300px;
+    width: 160px;
     color: white;
-    font-size: 13px;
-    line-height: 2.2;
+    font-size: 20px;
+    line-height: 24px;
     word-spacing: 0.5em;
     text-transform: capitalize;
+    text-align: center;
+    //height: 35px;
     &._bg-comedy {
       background-color: @color-comedy;
     }
@@ -127,7 +132,7 @@
     grid-template-columns: 150px 130px;
     grid-template-rows: 75px 75px 75px 75px 75px;
     &-title {
-      font-size: 14px;
+      font-size: 18px;
       text-align: left;
       color: rgb(167, 167, 167);
 
@@ -146,18 +151,23 @@
       }
     }
     &-value {
-      font-size: 17px;
+      font-size: 18px;
       text-align: right;
       color: white;
       word-spacing: 80px;
+
       &._rating {
         grid-area: 1 / 2 / 2 / 3;
-        color: black;
+        margin-top: 0px;
+        width: 50px;
+        height: 35px;
+      }
+      &._icon {
         background: #ffffff;
         border-radius: 17px;
+        margin-left: 85px;
         text-align: center;
-        margin-top: 0px;
-        margin-left: 50px;
+        color: black;
       }
       &._filmLength {
         grid-area: 2 / 2 / 3 / 3;
@@ -197,4 +207,49 @@
 
 .arrow--disabled {
   fill: rgba(255, 255, 255, 0.5);
+}
+@media (max-width: 1411px) {
+  .banner {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+
+    &__description {
+      width: 245px;
+      height: 496px;
+      margin-top: 100px;
+      line-height: 2;
+      margin-left: 12px;
+      display: grid;
+      grid-template-columns: 150px 130px;
+      grid-template-rows: 75px 75px 75px 75px 75px;
+
+      &-title {
+        font-size: 12px;
+      }
+
+      &-value {
+        font-size: 12px;
+        text-align: right;
+        color: white;
+        word-spacing: 80px;
+      }
+    }
+  }
+}
+@media (max-width: 820px) {
+  .banner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    &__genre {
+      padding: 4px 16px;
+      margin: 24px 24px 24px 0px;
+      border-radius: 8px;
+      width: 100px;
+      color: white;
+      font-size: 12px;
+    }
+    &__description {
+      display: none;
+    }
+  }
 }
