add color const

--- a/apps/ux-films-finder/src/app/app.component.html
+++ b/apps/ux-films-finder/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="ff-app">
   <ff-header></ff-header>
+  <ff-film-banner></ff-film-banner>
   <div class="ff-content">
     <router-outlet></router-outlet>
   </div>
