--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -19,7 +19,7 @@
   height: 496px;
   background: black;
   display: grid;
-  grid-template-columns: 5fr 3fr 3fr;
+  grid-template-columns: 5fr 2fr 3fr;
   &__name {
     width: 400px;
     padding-left: 100px;
@@ -59,55 +59,55 @@
     text-transform: capitalize;
     text-align: center;
     //height: 35px;
-    &._bg-comedy {
+    &._comedy {
       background-color: @color-comedy;
     }
-    &._bg-horror {
+    &._horror {
       background-color: @color-horror;
     }
-    &._bg-adventures {
+    &._adventures {
       background-color: @color-adventures;
     }
-    &._bg-thriller {
+    &._thriller {
       background-color: @color-thriller;
     }
-    &._bg-melodrama {
+    &._melodrama {
       background-color: @color-melodrama;
     }
-    &._bg-fantasy {
+    &._fantasy {
       background-color: @color-fantasy;
     }
-    &._bg-action {
+    &._action {
       background-color: @color-action;
     }
-    &._bg-family {
+    &._family {
       background-color: @color-family;
     }
-    &._bg-drama {
+    &._drama {
       background-color: @color-drama;
     }
-    &._bg-crime {
+    &._crime {
       background-color: @color-crime;
     }
-    &._bg-cartoon {
+    &._cartoon {
       background-color: @color-cartoon;
     }
-    &._bg-anime {
+    &._anime {
       background-color: @color-anime;
     }
-    &._bg-military {
+    &._military {
       background-color: @color-military;
     }
-    &._bg-history {
+    &._history {
       background-color: @color-history;
     }
-    &._bg-biography {
+    &._biography {
       background-color: @color-biography;
     }
-    &._bg-detective {
+    &._detective {
       background-color: @color-detective;
     }
-    &._bg-fiction {
+    &._fiction {
       background-color: @color-fiction;
     }
   }
@@ -123,11 +123,11 @@
     }
   }
   &__description {
+    margin-left: 48px;
     width: 345px;
     height: 496px;
     margin-top: 100px;
     line-height: 2;
-    margin-left: 12px;
     display: grid;
     grid-template-columns: 150px 130px;
     grid-template-rows: 75px 75px 75px 75px 75px;
