--- a/apps/ux-films-finder/src/app/components/main-page/main-page.component.html
+++ b/apps/ux-films-finder/src/app/components/main-page/main-page.component.html
@@ -13,3 +13,4 @@
     'https://upload.wikimedia.org/wikipedia/ru/9/98/Harry_Potter_and_the_Deathly_Hallows._Part_1_%E2%80%94_movie.jpg'
   "
 ></ff-card>
+<ff-video></ff-video>
