--- a/apps/ux-films-finder/src/app/components/search/search.component.html
+++ b/apps/ux-films-finder/src/app/components/search/search.component.html
@@ -3,51 +3,59 @@
     class="search__input"
     type="text"
     [(ngModel)]="searchInput"
-    (ngModelChange)="getListFilms(); getActorFilms()"
+    (ngModelChange)="getInfo()"
     placeholder=""
   />
   <mat-icon routerLink="advanced-search" class="search__filter">tune</mat-icon>
 </div>
 
-<ng-container class="films">
-  <mat-list class="films__list">
-    <p *ngIf="searchInput" class="films__titleName">Фильмы и сериалы</p>
+<ng-container class="search-field">
+  <mat-list class="search-field__list">
+    <p *ngIf="searchInput" class="search-field__title-name">Фильмы и сериалы</p>
     <mat-list-item
-      class="films__list-item"
+      class="search-field__list-item"
       *ngFor="let film of films$ | async | slice: 0:3"
       routerLink="/details/{{ film?.filmId }}"
-      ><img class="films__img" src="{{ film?.posterUrlPreview }}" />
+      ><img class="search-field__img" src="{{ film?.posterUrlPreview }}" />
 
-      <div class="films__names">
-        <p class="films__nameRu">{{ film?.nameRu }}</p>
-        <p class="films__nameEn">{{ film?.nameEn }}</p>
+      <div class="search-field__names">
+        <p class="search-field__name-ru">{{ film?.nameRu }}</p>
+        <p class="search-field__name-en">{{ film?.nameEn }}</p>
       </div>
     </mat-list-item>
-    <div class="films__full-list">
-      <p *ngIf="searchInput" class="films__button" (click)="getListFilms()">
+    <div class="search-field__full-list">
+      <p
+        *ngIf="searchInput"
+        class="search-field__button"
+        (click)="getListFilms()"
+      >
         Показать все
       </p>
-      <mat-icon *ngIf="searchInput" class="films__button">
+      <mat-icon *ngIf="searchInput" class="search-field__button">
         keyboard_arrow_right
       </mat-icon>
     </div>
 
-    <p *ngIf="searchInput" class="films__second-titleName">Персоны</p>
+    <p *ngIf="searchInput" class="search-field__second-title-name">Персоны</p>
     <mat-list-item
-      class="films__list-item"
+      class="search-field__list-item"
       *ngFor="let actor of actors$ | async | slice: 0:3"
       routerLink="/persons/{{ actor?.kinopoiskId }}"
-      ><img class="films__img" src="{{ actor?.posterUrl }}" />
-      <div class="films__names">
-        <p class="films__nameRu">{{ actor?.nameRu }}</p>
-        <p class="films__nameEn">{{ actor?.nameEn }}</p>
+      ><img class="search-field__img" src="{{ actor?.posterUrl }}" />
+      <div class="search-field__names">
+        <p class="search-field__name-ru">{{ actor?.nameRu }}</p>
+        <p class="search-field__name-en">{{ actor?.nameEn }}</p>
       </div>
     </mat-list-item>
-    <div class="films__full-list">
-      <p *ngIf="searchInput" class="films__button" (click)="getActorFilms()">
+    <div class="search-field__full-list">
+      <p
+        *ngIf="searchInput"
+        class="search-field__button"
+        (click)="getActorFilms()"
+      >
         Показать все
       </p>
-      <mat-icon *ngIf="searchInput" class="films__button"
+      <mat-icon *ngIf="searchInput" class="search-field__button"
         >keyboard_arrow_right</mat-icon
       >
     </div>
