add loader in category and search-persons component, footer

--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.html
@@ -24,6 +24,7 @@
       Такой человек не найден
     </ng-container>
   </ng-template>
+  <ff-loader *ngIf="loading"></ff-loader>
   <ng-template #listTemplate>
     <div class="search-person__list">
       <ng-container *ngFor="let person of (person$ | async)?.items">
