--- a/apps/ux-films-finder/src/app/components/category/category.component.html
+++ b/apps/ux-films-finder/src/app/components/category/category.component.html
@@ -1,3 +1,5 @@
+<ff-loader *ngIf="loading"></ff-loader>
+<ff-loader></ff-loader>
 <ng-container *ngFor="let film of (films$ | async)?.items">
   <a routerLink="/details/{{ film?.kinopoiskId }}">
     <ng-container>
