--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -4,19 +4,27 @@
   margin: 57px 40px;
   &__list {
     display: grid;
-    grid-template-columns: 2fr 2fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
+    grid-row-gap: 24px;
+    margin: 60px 40px;
+  }
+  &__item {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 40px;
   }
   &__list-empty {
     display: flex;
-    font-size: 16px;
-    margin: 16px 40px;
+    font-size: 24px;
+    color: @color-gray-1b;
+    margin-top: 80px;
+    justify-content: center;
   }
   &__card {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 60px 40px;
     width: 360px;
     height: 450px;
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.25),
@@ -58,6 +66,14 @@
     line-height: 18px;
     border: 0;
     color: @color-black-00;
+  }
+}
+@media only screen and (max-width: 1620px) {
+  .search-person {
+    &__list {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
   }
 }
 @media only screen and (max-width: 820px) {
