--- a/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
+++ b/apps/ux-films-finder/src/app/components/search-persons/search-persons.component.less
@@ -66,6 +66,10 @@
     line-height: 18px;
     border: 0;
     color: @color-black-00;
+    &:hover {
+      background: @color-green-04;
+      color: @color-white-ff;
+    }
   }
 }
 @media only screen and (max-width: 1620px) {
