--- a/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
+++ b/apps/ux-films-finder/src/app/components/banner/film-banner.component.less
@@ -15,18 +15,19 @@
 }
 
 .banner {
+  position: relative;
   width: 100%;
   height: 496px;
   background: black;
-  display: grid;
+  display: flex;
   grid-template-columns: 5fr 2fr 3fr;
+
   &__name {
-    width: 400px;
     padding-left: 100px;
   }
 
   &__name-ru {
-    width: 300px;
+    width: 80%;
     margin-top: 90px;
     margin-bottom: 32px;
     font-size: 35px;
@@ -36,7 +37,6 @@
   }
 
   &__name-en {
-    width: 300px;
     margin-bottom: 36px;
     color: rgb(167, 167, 167);
     font-size: 19px;
@@ -49,9 +49,8 @@
   }
   &__genre {
     padding: 4px 32px;
-    margin: 24px 24px 24px 0px;
+    margin: 1px 24px 24px 1px;
     border-radius: 17px;
-    width: 160px;
     color: white;
     font-size: 20px;
     line-height: 24px;
@@ -112,19 +111,16 @@
     }
   }
   &__poster {
-    width: 320px;
     height: 496px;
     display: flex;
 
     &._posterUrl img {
       margin-top: 25px;
-      width: 300px;
       height: 90%;
     }
   }
   &__description {
     margin-left: 48px;
-    width: 345px;
     height: 496px;
     margin-top: 100px;
     line-height: 2;
@@ -158,7 +154,6 @@
 
       &._rating {
         grid-area: 1 / 2 / 2 / 3;
-        margin-top: 0px;
         width: 50px;
         height: 35px;
       }
@@ -208,48 +203,57 @@
 .arrow--disabled {
   fill: rgba(255, 255, 255, 0.5);
 }
-@media (max-width: 1411px) {
-  .banner {
-    display: grid;
-    grid-template-columns: 3fr 1fr 1fr;
+.banner {
+  height: 100%;
+  display: flex;
+  padding: 24px 48px;
+  @media screen and (max-width: 800px) {
+    flex-direction: column;
+    align-items: center;
+  }
 
-    &__description {
-      width: 245px;
-      height: 496px;
-      margin-top: 100px;
-      line-height: 2;
-      margin-left: 12px;
-      display: grid;
-      grid-template-columns: 150px 130px;
-      grid-template-rows: 75px 75px 75px 75px 75px;
+  &__genres {
+    margin-top: 24px;
+  }
 
-      &-title {
-        font-size: 12px;
-      }
+  &__genre {
+    padding: 4px 8px;
+    margin-bottom: 8px;
+    display: inline-block;
+  }
 
-      &-value {
-        font-size: 12px;
-        text-align: right;
-        color: white;
-        word-spacing: 80px;
-      }
+  &__poster {
+    margin: 0 24px;
+
+    &._posterUrl img {
+      height: 400px;
     }
   }
-}
-@media (max-width: 820px) {
-  .banner {
-    display: grid;
+
+  &__description {
+    display: inline-grid;
     grid-template-columns: 1fr 1fr;
-    &__genre {
-      padding: 4px 16px;
-      margin: 24px 24px 24px 0px;
-      border-radius: 8px;
-      width: 100px;
-      color: white;
-      font-size: 12px;
+
+    &-value {
+      text-align: right;
     }
-    &__description {
-      display: none;
+  }
+
+  &__name {
+    flex-grow: 1;
+  }
+
+  &__arrow {
+    position: absolute;
+    font-size: 80px;
+    color: white;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 6px;
+
+    &._right {
+      right: 6px;
+      left: auto;
     }
   }
 }
